--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     
             </div>
             <div class="bg-image">
-                <img src="images/background+pict.png" alt="">
+                <img id="image-1" src="images/background+pict.png" alt="">
             </div>
         </div>
     </main>
     <section class="about" id="About">
         <div class="container">
             <div class="bg-image">
-                <img src="images/vegetable_table.png" alt="">
+                <img id="image-2" src="images/vegetable_table.png" alt="">
             </div>
             <div class="text">
                 <h3>About us</h3>
@@ -70,7 +70,7 @@
             </div>
             <div class="products">
                 <div class="product">
-                    <img src="images/menu_photo1.png" alt="">
+                    <img class="product-image" src="images/menu_photo1.png" alt="">
                     <div class="menu-text">
                         <div>
                             <span class="menu-title">Mighty burger</span>
@@ -142,13 +142,13 @@
             </div>
             <div class="social">
                 <i class="fa-solid fa-location-dot"></i>
-                <h1>Today 12 pm - 9 pm</h1>
-                <p>Working Hours</p>
+                <h1>Piastowska 4, Cracow</h1>
+                <p>Find Us</p>
             </div>
             <div class="social">
                 <i class="fa-solid fa-phone"></i>
-                <h1>Today 12 pm - 9 pm</h1>
-                <p>Working Hours</p>
+                <h1>503 204 176</h1>
+                <p>Call to Us</p>
             </div>
         </div>
     </section>
